--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bizcharts": "^4.1.11",
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
+    "copy-webpack-plugin": "^12.0.2",
+    "file-loader": "^6.2.0",
     "i18next": "^23.11.5",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
