--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "react-app-rewired start",
     "dev": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "build:dev": "cross-env DEV_MODE=true react-app-rewired build",
     "eject": "react-scripts eject",
     "eslint": "eslint src/ --ext .ts,.tsx,.js,.jsx --fix --cache",
     "stylelint": "stylelint \"src/**/*.less\" \"src/**/*.css\" --fix --cache",
@@ -47,6 +48,7 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "cross-env": "^7.0.3",
     "customize-cra": "^1.0.0",
     "customize-cra-less-loader": "^2.0.0",
     "eslint": "^8.9.0",
