--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "react-app-rewired start",
     "dev": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "build:dev": "cross-env DEV_MODE=true react-app-rewired build",
+    "build:dev": "node scripts/build-dev.js build",
     "eject": "react-scripts eject",
     "eslint": "eslint src/ --ext .ts,.tsx,.js,.jsx --fix --cache",
     "stylelint": "stylelint \"src/**/*.less\" \"src/**/*.css\" --fix --cache",
