--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
     "copy-webpack-plugin": "^12.0.2",
+    "crypto-js": "^4.2.0",
     "file-loader": "^6.2.0",
     "i18next": "^23.11.5",
     "lodash": "^4.17.21",
