--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "pretty-quick": "^3.1.2",
     "react-app-rewired": "^2.1.8",
     "react-scripts": "^5.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "webpack": "^5.64.4"
   },
   "browserslist": {
     "production": [
